-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
-
Windows
-
c09412fcea92864c4240bced258a72ab5f73870d
QWindowsInputContext doesn't handle input method correctly with Japanese IME HIRAGANA mode especially input in the process of KANJI conversioning.
It makes buggy pre-edit string.
Please show attatched files.
It is reproduced on most versions of Windows and Qt.
I test on the 'Google Earth', 'Virtual Box', 'SQL Browser' and 'Qt Creator' with Windows10 and more.
Steps to reproduce:
1. In the 'Region and Language' select 'Change keyboards..' Add Japanese Microsoft IME Keyboard. (or run on Japanese edition of Windows)
2. Run Qt Creator and open file as edit mode.
3. From the Language Bar change the input language to Japanese. Also change the Input mode to Hiragana (it has the pre-edit state).
4. Focus on editor and press 'a' key three times. (inputed "あああ"in Japanese)
5. Press Space key once.
6. Press 'a' key once. (inputed new "あ")
7. Press BackSpace key three times.
a) I expect a result string "あ" but it shows "あ あ".
b) Cannot delete the last "あ" with the Delete or BackSpace key.
c) The text cursor looks as if it is anchored behind the last "あ".(Only Qt Creator)
| For Gerrit Dashboard: QTBUG-49955 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 143845,2 | Windows: Fix QWindowsInputContext for Japanese IME. | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 143971,4 | Windows: Fix QWindowsInputContext for Japanese IME. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |